Se editó un título

--- a/El_jardín_de_la_Coco/Script_read_codbarras.ipynb
+++ b/El_jardín_de_la_Coco/Script_read_codbarras.ipynb
@@ -21,7 +21,7 @@
    "id": "5789a25e",
    "metadata": {},
    "source": [
-    "Generador de códigos de barra\n",
+    "**1. Generador de códigos de barra**\n",
     "\n",
     "Para seguimiento logístico. Un código universal se debe pedir a https://gs1chile.org/Codigos"
    ]
