--- a/El_jardín_de_la_Coco/Script_read_codbarras.ipynb
+++ b/El_jardín_de_la_Coco/Script_read_codbarras.ipynb
@@ -5,7 +5,7 @@
    "id": "a1438dfd",
    "metadata": {},
    "source": [
-    "# Lector de códigos de barra con el celular"
+    "# Lector de códigos de barra con un dispositivo móvil"
    ]
   },
   {
@@ -13,41 +13,238 @@
    "id": "44a87e9a",
    "metadata": {},
    "source": [
-    "Cuaderno que contiene la automatización de la lectura de códigos de barra mediante la cámara del celular. Para ello se ocupa IP Webcam que media la comunicación entre la camara del celular y el PC. Es necesario la conexión a una red."
+    "Cuaderno que contiene la automatización de la lectura de códigos de barra mediante un dispositivo móvil."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5789a25e",
+   "id": "027e9ff9",
    "metadata": {},
    "source": [
-    "**1. Generador de códigos de barra**\n",
+    "**1. Importar librerías**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ba70766b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from pyzbar.pyzbar import decode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ee62ed",
+   "metadata": {},
+   "source": [
+    "**2. Cargar imagen**\n",
     "\n",
-    "Para seguimiento logístico. Un código universal se debe pedir a https://gs1chile.org/Codigos"
+    "La función de OpenCV **imread()** devuelve:\n",
+    "- Una matriz (imagen cargada correctamente)\n",
+    "- None si no pudo cargarla\n",
+    "\n",
+    "Nota: **None** en Python significa ausencia de valor.\n",
+    "\n",
+    "**¿Por qué se usa is y no ==?**\n",
+    "\n",
+    "En Python:\n",
+    "- **==** compara valores\n",
+    "- **is** compara identidad (si es exactamente el mismo objeto)\n",
+    "\n",
+    "None es un objeto único en memoria.\n",
+    "La forma correcta y profesional de verificarlo es: **if variable is None:**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba70766b",
+   "id": "627d51ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import barcode\n",
-    "from barcode.writer import ImageWriter\n",
+    "# Cargar imagen\n",
+    "imagen = cv2.imread(\"codigofoto.jpeg\") # Foto tomada con el celular\n",
     "\n",
-    "CODABAR = barcode.get_barcode_class('codabar')\n",
+    "# Verificar que la imagen se cargó correctamente\n",
+    "if imagen is None:\n",
+    "    print(\"Error: No se pudo cargar la imagen.\")\n",
+    "    exit() # Detener la ejecución"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaec1b0c",
+   "metadata": {},
+   "source": [
+    "**3. Mejorar calidad de imagen**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f1c116",
+   "metadata": {},
+   "source": [
+    "**cv2.COLOR_BGR2GRAY** es una constante que convierte una imagen RGB a escala de grises. Cada pixel tiene 3 números que son transformados en 1 solo de la siguiente manera: Gray = 0.299 * R + 0.587 * G + 0.114 * B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e8d26469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir a escala de grises (mejora detección)\n",
+    "gris = cv2.cvtColor(imagen, cv2.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952ec54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Guardar imagen generada\n",
+    "# cv2.imwrite(\"gris.jpg\", gris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c92e0d10",
+   "metadata": {},
+   "source": [
+    "**4. Detectar código de barras**\n",
     "\n",
-    "for i in range (1): # seteado en \"1\" para que itere solo 1 vez. El output será \"A0A\". Nota: range(i, j) produces i, i+1, i+2, ..., j-1\n",
-    " serie = \"A\" + str(i) + \"A\"\n",
-    " codigo = CODABAR(serie, writer=ImageWriter())\n",
-    " codigo.save(serie) #si el script se ejecuta en una carpeta específica los códigos quedan guardados en esa carpeta"
+    "¿Qué hace exactamente decode()?\n",
+    "1. Recibe una imagen (en tu caso gris).\n",
+    "2. Analiza la imagen buscando patrones que correspondan a:\n",
+    "   - Códigos de barras (EAN, UPC, Code128, etc.)\n",
+    "   - Códigos QR\n",
+    "3. Si encuentra alguno:\n",
+    "   - Lo decodifica (extrae el contenido)\n",
+    "   - Devuelve información estructurada\n",
+    "\n",
+    "¿Qué devuelve?\n",
+    "Devuelve una lista de objetos detectados.\n",
+    "Puede ser:\n",
+    "- []          # No encontró nada\n",
+    "o algo como:\n",
+    "- [Decoded(...), Decoded(...)]\n",
+    "\n",
+    "Si hay varios códigos en la imagen, devuelve varios elementos.\n",
+    "\n",
+    "¿Qué contiene cada elemento?\n",
+    "Cada objeto tiene atributos importantes:\n",
+    "- codigo.data → contenido del código (en bytes)\n",
+    "- codigo.type → tipo de código (EAN13, CODE128, QRCODE, etc.)\n",
+    "- codigo.rect → posición y tamaño (x, y, ancho, alto)\n",
+    "- codigo.polygon → puntos del contorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "380fd628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Decoded(data=b'7801000001898', type='EAN13', rect=Rect(left=398, top=365, width=168, height=460), polygon=[Point(x=398, y=606), Point(x=398, y=824), Point(x=402, y=825), Point(x=482, y=825), Point(x=554, y=823), Point(x=566, y=606), Point(x=565, y=373), Point(x=557, y=372), Point(x=431, y=366), Point(x=409, y=365), Point(x=399, y=365)], quality=321, orientation='RIGHT')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detectar códigos de barras\n",
+    "codigos = decode(gris) # Devuelve una lista de objetos. Cada uno tiene atributos\n",
+    "print(codigos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f4a087",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Código detectado: 7801000001898\n",
+      "Tipo: EAN13\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not codigos:\n",
+    "    print(\"No se detectó ningún código de barras.\")\n",
+    "else:\n",
+    "    # Iterar la lista codigos. Cada elemento de la lista se llama codigo\n",
+    "    for codigo in codigos: \n",
+    "        # Extraer datos\n",
+    "        datos = codigo.data.decode(\"utf-8\") # Extrae el atributo data y luego los muestra en UTF-8\n",
+    "        tipo = codigo.type # Extrae el atributo type\n",
+    "\n",
+    "        print(f\"Código detectado: {datos}\")\n",
+    "        print(f\"Tipo: {tipo}\")\n",
+    "\n",
+    "        # # Dibujar rectángulo alrededor del código\n",
+    "        # x, y, w, h = codigo.rect\n",
+    "        # cv2.rectangle(imagen, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
+    "\n",
+    "        # # Mostrar texto encima\n",
+    "        # cv2.putText(imagen, datos, (x, y - 10),\n",
+    "        #             cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "        #             0.5, (0, 255, 0), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ce3914f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mostrar imagen con detección\n",
+    "# cv2.imshow(\"Resultado\", imagen)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
